exports[`logger() logs actions and any resulting analytics event 1`] = `
"%c Analytics
  %c Action:  color: #93748A; font-weight: bold; {\"type\":\"ROUTE_CHANGED\",\"payload\":\"/\"}
  %c Event:  color: #93748A; font-weight: bold; {\"hitType\":\"pageview\",\"page\":\"/\"}"
`;

exports[`logger() logs actions and any resulting analytics events 1`] = `
"%c Analytics
  %c Action:  color: #93748A; font-weight: bold; {\"type\":\"ROUTE_CHANGED\",\"payload\":\"/\"}
%c Events:
  %c (1) color: #93748A; font-weight: bold; {\"hitType\":\"pageview\",\"page\":\"/\"}
  %c (2) color: #93748A; font-weight: bold; {\"hitType\":\"pageview\",\"page\":\"/home\"}"
`;

exports[`logger() logs events that are saved offline with a helpful message 1`] = `
"%c Analytics (pushed to offline storage)
  %c Action:  color: #93748A; font-weight: bold; {\"type\":\"ROUTE_CHANGED\",\"payload\":\"/\"}
  %c Event:  color: #93748A; font-weight: bold; {\"hitType\":\"pageview\",\"page\":\"/\"}"
`;

exports[`logger() logs events that were saved offline with a helpful message 1`] = `
"%c Analytics (from offline storage)
  %c Event:  color: #93748A; font-weight: bold; {\"hitType\":\"pageview\",\"page\":\"/\"}"
`;

exports[`logger() logs nothing when there are no events 1`] = `""`;
